# pesto.nvim

./: .busted  .editorconfig  .git-blame-ingore-revs  .gitignore  LICENSE  README.md  makefile
doc/: pesto.txt
examples/buildfarm-execution/: README.md
examples/buildfarm-execution/src/: digit_num.c  ids.c  ids.h
examples/c-example/: .bazelrc  README.md
examples/c-example/data/: BUILD
examples/c-example/src/: BUILD  digit_num.h  main.c
examples/java-example/: .bazelrc  BUILD  MODULE.bazel
examples/scala-example/: MODULE.bazel  maven_install.json
examples/scala-example/src/main/scala/com/example/: BUILD  Main.scala
examples/scala-example/src/main/scala/com/example/routes/: BUILD  Routes.scala
examples/scala-example/toolchain/: BUILD
lua/pesto/: bazel.lua  commands.lua  components.lua  file_types.lua  health.lua  init.lua  internal_settings.lua  logger.lua  settings.lua
lua/pesto/bazel/: bazel_command.lua  bep.lua  bep_json_parser.lua  bep_tree.lua  build_event.lua  build_event_file_loader.lua  build_event_json_loader.lua  build_event_tree.lua  build_event_tree_queries.lua  byte_stream_client.lua  cli.lua  init.lua  label.lua  package.lua  remote_apis_helpers.lua  remote_apis_helpers_command_builder.lua  remote_apis_helpers_util.lua  repo.lua
lua/pesto/cli/: bazel_basic_completion.lua  bazel_build_event_util.lua  bazel_subcommand.lua  build_subcommand.lua  copy_last_bazel_command_subcommand.lua  dump_failed_action_logs.lua  init.lua  install_remote_apis_helpers_subcommand.lua  load_quickfix_subcommand.lua  open_build_events_summary_subcommand.lua  open_build_term_subcommand.lua  subcommands.lua  view_build_events_summary_subcommand.lua
lua/pesto/query_drawer/: init.lua  query_drawer.lua  query_drawer_manager.lua  query_drawer_view.lua
lua/pesto/runner/: bazel_run_history.lua  internal_run_bazel_fn.lua  runner.lua  terminal.lua  tmux.lua
lua/pesto/util/: cli.lua  (+14 more)
plugin/: pesto.lua
syntax/: pesto-build-summary.vim
tools/: nlua.sh
tools/pesto-bash-helpers/: complete-bazel-test.sh  complete-bazel.sh
tools/pesto-remote-apis-helpers/: README.md  makefile  pyproject.toml
tools/pesto-remote-apis-helpers/scripts/: gen_protos.py
tools/pesto-remote-apis-helpers/src/pesto/fetch_byte_streams/: main.py
(+85 files in other folders)
