bazel_dep(name = "rules_scala", version = "7.2.4")
bazel_dep(name = "rules_jvm_external", version = "6.10")

# Scala
scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "3.3.7")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)

scala_deps.scala()

register_toolchains("//toolchain:pesto_scala_toolchain")

# External Java dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Note: To update dependencies run the following:
# REPIN=1 bazel run "@maven//:pin"
maven.install(
    artifacts = [
      "org.http4s:http4s-core_3:0.23.34",
      "org.http4s:http4s-dsl_3:0.23.34",
      "org.http4s:http4s-ember-server_3:0.23.34",
      "org.http4s:http4s-ember-client_3:0.23.34",
      "org.scala-lang:scala3-library_3:3.3.7",
      "org.typelevel:cats-core_3:2.13.0",
      "org.typelevel:cats-effect_3:3.7.0",
      "org.typelevel:cats-effect-kernel_3:3.7.0",
      "org.typelevel:cats-effect-std_3:3.7.0",
      "org.typelevel:cats-kernel_3:2.13.0",
      "org.typelevel:cats-mtl_3:1.6.0",
      "org.typelevel:log4cats-slf4j_3:2.8.0",
      "org.typelevel:log4cats-core_3:2.8.0"
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],

)
use_repo(maven, "maven")
